Version 1.0:

  * 1.x is a java 1.5 version, 0.x is a java 1.4 version 
