@@ -1,3 +1,3 @@
 P4: sync -f //depot/projects/libdbus-java/...@697 processing 117 changes from p4 (//depot/projects/libdbus-java/...) to git (dbus-java)Importing changeset 697P4: describe -s 697P4: users mjj29P4: sync    //depot/projects/libdbus-java/...@697 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADfatal: Needed a single revision
 GIT: write-treeGIT: commit-tree 56d46752d1bffa41c57c9abf419ccd6480d20e6f  < .msgCommitting initial tree 56d46752d1bffa41c57c9abf419ccd6480d20e6f
-GIT: tag -f p4/697 4a839857517596e3390d8944e3b83a05affe8c5dGIT: update-ref HEAD 4a839857517596e3390d8944e3b83a05affe8c5d Importing changeset 698P4: describe -s 698P4: sync    //depot/projects/libdbus-java/...@698 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree 3a54b1c50325cbbdc45a0b50de45988916689c0e -p HEAD < .msgGIT: tag -f p4/698 04db36fe9dda98a69c0b64af78d5e19a95dbe1deGIT: update-ref HEAD 04db36fe9dda98a69c0b64af78d5e19a95dbe1de 4a839857517596e3390d8944e3b83a05affe8c5dImporting changeset 699P4: describe -s 699P4: sync    //depot/projects/libdbus-java/...@699 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree e950bd94a534237a25efe12b00ed501030bfecc5 -p HEAD < .msgGIT: tag -f p4/699 96a17f10adbe30f0485fac2d7d7dd69162c9306dGIT: update-ref HEAD 96a17f10adbe30f0485fac2d7d7dd69162c9306d 04db36fe9dda98a69c0b64af78d5e19a95dbe1deImporting changeset 700P4: describe -s 700P4: sync    //depot/projects/libdbus-java/...@700 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree be8e28f2a4ff4a4735cc0f1077cd84bcc72e16ff -p HEAD < .msgGIT: tag -f p4/700 c0f3a99f8be92afa77ea56e95609dfdc6e3da0baGIT: update-ref HEAD c0f3a99f8be92afa77ea56e95609dfdc6e3da0ba 96a17f10adbe30f0485fac2d7d7dd69162c9306dImporting changeset 702P4: describe -s 702P4: sync    //depot/projects/libdbus-java/...@702 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree 6578906ad40eff0342ef463e5cc806a01e9998ae -p HEAD < .msgGIT: tag -f p4/702 54cea314cc41dc47608f3272cefb4eb5fbe17be8GIT: update-ref HEAD 54cea314cc41dc47608f3272cefb4eb5fbe17be8 c0f3a99f8be92afa77ea56e95609dfdc6e3da0baImporting changeset 703P4: describe -s 703P4: sync    //depot/projects/libdbus-java/...@703 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree d7f7af0b1d3c367b2e4319bd8ed0eb45f6636322 -p HEAD < .msgGIT: tag -f p4/703 a40f2880e1fa61989f347034d7417d69424b0acfGIT: update-ref HEAD a40f2880e1fa61989f347034d7417d69424b0acf 54cea314cc41dc47608f3272cefb4eb5fbe17be8Importing changeset 705P4: describe -s 705P4: sync    //depot/projects/libdbus-java/...@705 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree 5b5ceaa2234b30cada4bea8f1135ea9875985725 -p HEAD < .msgGIT: tag -f p4/705 bbba4c69fe60e37d7f100bd01e131a3761b33ac6GIT: update-ref HEAD bbba4c69fe60e37d7f100bd01e131a3761b33ac6 a40f2880e1fa61989f347034d7417d69424b0acfImporting changeset 706P4: describe -s 706P4: sync    //depot/projects/libdbus-java/...@706 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree cb08331bdf6fcc6afa6c08ac47e2e4d2d746dc1b -p HEAD < .msgGIT: tag -f p4/706 9133feddd88ff2e202031abda973f3765a66148bGIT: update-ref HEAD 9133feddd88ff2e202031abda973f3765a66148b bbba4c69fe60e37d7f100bd01e131a3761b33ac6Importing changeset 707P4: describe -s 707P4: sync    //depot/projects/libdbus-java/...@707 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree b4c90b57ec412db8bc82088efa41e1c4d9c53410 -p HEAD < .msgGIT: tag -f p4/707 63a8ddaa4efe76abe2c3069780d2042a009309d6GIT: update-ref HEAD 63a8ddaa4efe76abe2c3069780d2042a009309d6 9133feddd88ff2e202031abda973f3765a66148bImporting changeset 709P4: describe -s 709P4: sync    //depot/projects/libdbus-java/...@709 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree 00ea605ad73a80c928404704de0ae35d42e7a9a0 -p HEAD < .msgGIT: tag -f p4/709 a283e541b861fb4be7f423cb5c53826e248d05e1GIT: update-ref HEAD a283e541b861fb4be7f423cb5c53826e248d05e1 63a8ddaa4efe76abe2c3069780d2042a009309d6Importing changeset 710P4: describe -s 710P4: sync    //depot/projects/libdbus-java/...@710 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree 15185938e9297c50e8d016376044ee2342409c1b -p HEAD < .msgGIT: tag -f p4/710 42c22e233c061cc6ed771e19af5b9e6e4c41c086GIT: update-ref HEAD 42c22e233c061cc6ed771e19af5b9e6e4c41c086 a283e541b861fb4be7f423cb5c53826e248d05e1Importing changeset 714P4: describe -s 714P4: sync    //depot/projects/libdbus-java/...@714 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree d8ac29d0ed1791d17d88d8ec02893c3d80c202b6 -p HEAD < .msgGIT: tag -f p4/714 c984c62484978b7ac3f4c7823c7f1947775b02faGIT: update-ref HEAD c984c62484978b7ac3f4c7823c7f1947775b02fa 42c22e233c061cc6ed771e19af5b9e6e4c41c086Importing changeset 716P4: describe -s 716P4: sync    //depot/projects/libdbus-java/...@716 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree 0745dc2f8aeaead9be023294bb6a7c5585fb95f9 -p HEAD < .msgGIT: tag -f p4/716 9dd4c0af56471e8b7f5764ec3e0486620c15a5deGIT: update-ref HEAD 9dd4c0af56471e8b7f5764ec3e0486620c15a5de c984c62484978b7ac3f4c7823c7f1947775b02faImporting changeset 718P4: describe -s 718P4: sync    //depot/projects/libdbus-java/...@718 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree da4e6c316fb809bb9ba5b620438f9e5d11c4e9bf -p HEAD < .msgGIT: tag -f p4/718 465539cbfe605cba3b0463e86f3e37091b7f5142GIT: update-ref HEAD 465539cbfe605cba3b0463e86f3e37091b7f5142 9dd4c0af56471e8b7f5764ec3e0486620c15a5deImporting changeset 726P4: describe -s 726P4: sync    //depot/projects/libdbus-java/...@726 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree 73dccd55869d4549f56ec971641b35b5bcedf3c6 -p HEAD < .msgGIT: tag -f p4/726 e2f4f5861fa24169420dff33daf03d85cab7e5b8GIT: update-ref HEAD e2f4f5861fa24169420dff33daf03d85cab7e5b8 465539cbfe605cba3b0463e86f3e37091b7f5142Importing changeset 727P4: describe -s 727P4: sync    //depot/projects/libdbus-java/...@727 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree 67ba3993231aa602ddb6bd9ae8896bd389072d39 -p HEAD < .msgGIT: tag -f p4/727 bdf43d630421468a42bedf86a5e476f9ecb7bc4bGIT: update-ref HEAD bdf43d630421468a42bedf86a5e476f9ecb7bc4b e2f4f5861fa24169420dff33daf03d85cab7e5b8Importing changeset 728P4: describe -s 728P4: sync    //depot/projects/libdbus-java/...@728 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree 4d070adc845038d0fd1b777435e7412cfb43f715 -p HEAD < .msgGIT: tag -f p4/728 1e81a8e5f339d03612990ad17bb8b5219360c17cGIT: update-ref HEAD 1e81a8e5f339d03612990ad17bb8b5219360c17c bdf43d630421468a42bedf86a5e476f9ecb7bc4bImporting changeset 730P4: describe -s 730P4: sync    //depot/projects/libdbus-java/...@730 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree fda2e2ea462775c97071204fcb39740f146a6d79 -p HEAD < .msgGIT: tag -f p4/730 c51d0f65589c45bd005244df54a05950e1aa26f4GIT: update-ref HEAD c51d0f65589c45bd005244df54a05950e1aa26f4 1e81a8e5f339d03612990ad17bb8b5219360c17cImporting changeset 735P4: describe -s 735P4: sync    //depot/projects/libdbus-java/...@735 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree 7f654117588b5891c6f15b16f3e8eec5e4d37f30 -p HEAD < .msgGIT: tag -f p4/735 99500724df3cbbecba8d624e12ff085810ae2c99GIT: update-ref HEAD 99500724df3cbbecba8d624e12ff085810ae2c99 c51d0f65589c45bd005244df54a05950e1aa26f4Importing changeset 736P4: describe -s 736P4: sync    //depot/projects/libdbus-java/...@736 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree 82e37a848c85e386177eb8c03ae13ab04d1fc125 -p HEAD < .msgGIT: tag -f p4/736 d7c805be5a30a6692c7b176830b9a68e64a7678cGIT: update-ref HEAD d7c805be5a30a6692c7b176830b9a68e64a7678c 99500724df3cbbecba8d624e12ff085810ae2c99Importing changeset 737P4: describe -s 737P4: sync    //depot/projects/libdbus-java/...@737 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree 0f48e76f8d7c23926e07d55bc8c9f4961327ec7f -p HEAD < .msgGIT: tag -f p4/737 2e87f60c2c2da0592c01a8cc1d07178a2988e498GIT: update-ref HEAD 2e87f60c2c2da0592c01a8cc1d07178a2988e498 d7c805be5a30a6692c7b176830b9a68e64a7678cImporting changeset 738P4: describe -s 738P4: sync    //depot/projects/libdbus-java/...@738 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree cc4b0b6e9471f977c78e9ee9e9faa086f5ca1c99 -p HEAD < .msgGIT: tag -f p4/738 c0e1c8b56fbd42796f5bc7bca728a05f59b46bf7GIT: update-ref HEAD c0e1c8b56fbd42796f5bc7bca728a05f59b46bf7 2e87f60c2c2da0592c01a8cc1d07178a2988e498Importing changeset 741P4: describe -s 741P4: sync    //depot/projects/libdbus-java/...@741 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdin
+GIT: tag -f p4/697 4a839857517596e3390d8944e3b83a05affe8c5dGIT: update-ref HEAD 4a839857517596e3390d8944e3b83a05affe8c5d Importing changeset 698P4: describe -s 698P4: sync    //depot/projects/libdbus-java/...@698 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree 3a54b1c50325cbbdc45a0b50de45988916689c0e -p HEAD < .msgGIT: tag -f p4/698 04db36fe9dda98a69c0b64af78d5e19a95dbe1deGIT: update-ref HEAD 04db36fe9dda98a69c0b64af78d5e19a95dbe1de 4a839857517596e3390d8944e3b83a05affe8c5dImporting changeset 699P4: describe -s 699P4: sync    //depot/projects/libdbus-java/...@699 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree e950bd94a534237a25efe12b00ed501030bfecc5 -p HEAD < .msgGIT: tag -f p4/699 96a17f10adbe30f0485fac2d7d7dd69162c9306dGIT: update-ref HEAD 96a17f10adbe30f0485fac2d7d7dd69162c9306d 04db36fe9dda98a69c0b64af78d5e19a95dbe1deImporting changeset 700P4: describe -s 700P4: sync    //depot/projects/libdbus-java/...@700 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree be8e28f2a4ff4a4735cc0f1077cd84bcc72e16ff -p HEAD < .msgGIT: tag -f p4/700 c0f3a99f8be92afa77ea56e95609dfdc6e3da0baGIT: update-ref HEAD c0f3a99f8be92afa77ea56e95609dfdc6e3da0ba 96a17f10adbe30f0485fac2d7d7dd69162c9306dImporting changeset 702P4: describe -s 702P4: sync    //depot/projects/libdbus-java/...@702 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree 6578906ad40eff0342ef463e5cc806a01e9998ae -p HEAD < .msgGIT: tag -f p4/702 54cea314cc41dc47608f3272cefb4eb5fbe17be8GIT: update-ref HEAD 54cea314cc41dc47608f3272cefb4eb5fbe17be8 c0f3a99f8be92afa77ea56e95609dfdc6e3da0baImporting changeset 703P4: describe -s 703P4: sync    //depot/projects/libdbus-java/...@703 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree d7f7af0b1d3c367b2e4319bd8ed0eb45f6636322 -p HEAD < .msgGIT: tag -f p4/703 a40f2880e1fa61989f347034d7417d69424b0acfGIT: update-ref HEAD a40f2880e1fa61989f347034d7417d69424b0acf 54cea314cc41dc47608f3272cefb4eb5fbe17be8Importing changeset 705P4: describe -s 705P4: sync    //depot/projects/libdbus-java/...@705 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree 5b5ceaa2234b30cada4bea8f1135ea9875985725 -p HEAD < .msgGIT: tag -f p4/705 bbba4c69fe60e37d7f100bd01e131a3761b33ac6GIT: update-ref HEAD bbba4c69fe60e37d7f100bd01e131a3761b33ac6 a40f2880e1fa61989f347034d7417d69424b0acfImporting changeset 706P4: describe -s 706P4: sync    //depot/projects/libdbus-java/...@706 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree cb08331bdf6fcc6afa6c08ac47e2e4d2d746dc1b -p HEAD < .msgGIT: tag -f p4/706 9133feddd88ff2e202031abda973f3765a66148bGIT: update-ref HEAD 9133feddd88ff2e202031abda973f3765a66148b bbba4c69fe60e37d7f100bd01e131a3761b33ac6Importing changeset 707P4: describe -s 707P4: sync    //depot/projects/libdbus-java/...@707 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree b4c90b57ec412db8bc82088efa41e1c4d9c53410 -p HEAD < .msgGIT: tag -f p4/707 63a8ddaa4efe76abe2c3069780d2042a009309d6GIT: update-ref HEAD 63a8ddaa4efe76abe2c3069780d2042a009309d6 9133feddd88ff2e202031abda973f3765a66148bImporting changeset 709P4: describe -s 709P4: sync    //depot/projects/libdbus-java/...@709 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree 00ea605ad73a80c928404704de0ae35d42e7a9a0 -p HEAD < .msgGIT: tag -f p4/709 a283e541b861fb4be7f423cb5c53826e248d05e1GIT: update-ref HEAD a283e541b861fb4be7f423cb5c53826e248d05e1 63a8ddaa4efe76abe2c3069780d2042a009309d6Importing changeset 710P4: describe -s 710P4: sync    //depot/projects/libdbus-java/...@710 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree 15185938e9297c50e8d016376044ee2342409c1b -p HEAD < .msgGIT: tag -f p4/710 42c22e233c061cc6ed771e19af5b9e6e4c41c086GIT: update-ref HEAD 42c22e233c061cc6ed771e19af5b9e6e4c41c086 a283e541b861fb4be7f423cb5c53826e248d05e1Importing changeset 714P4: describe -s 714P4: sync    //depot/projects/libdbus-java/...@714 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree d8ac29d0ed1791d17d88d8ec02893c3d80c202b6 -p HEAD < .msgGIT: tag -f p4/714 c984c62484978b7ac3f4c7823c7f1947775b02faGIT: update-ref HEAD c984c62484978b7ac3f4c7823c7f1947775b02fa 42c22e233c061cc6ed771e19af5b9e6e4c41c086Importing changeset 716P4: describe -s 716P4: sync    //depot/projects/libdbus-java/...@716 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree 0745dc2f8aeaead9be023294bb6a7c5585fb95f9 -p HEAD < .msgGIT: tag -f p4/716 9dd4c0af56471e8b7f5764ec3e0486620c15a5deGIT: update-ref HEAD 9dd4c0af56471e8b7f5764ec3e0486620c15a5de c984c62484978b7ac3f4c7823c7f1947775b02faImporting changeset 718P4: describe -s 718P4: sync    //depot/projects/libdbus-java/...@718 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree da4e6c316fb809bb9ba5b620438f9e5d11c4e9bf -p HEAD < .msgGIT: tag -f p4/718 465539cbfe605cba3b0463e86f3e37091b7f5142GIT: update-ref HEAD 465539cbfe605cba3b0463e86f3e37091b7f5142 9dd4c0af56471e8b7f5764ec3e0486620c15a5deImporting changeset 726P4: describe -s 726P4: sync    //depot/projects/libdbus-java/...@726 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree 73dccd55869d4549f56ec971641b35b5bcedf3c6 -p HEAD < .msgGIT: tag -f p4/726 e2f4f5861fa24169420dff33daf03d85cab7e5b8GIT: update-ref HEAD e2f4f5861fa24169420dff33daf03d85cab7e5b8 465539cbfe605cba3b0463e86f3e37091b7f5142Importing changeset 727P4: describe -s 727P4: sync    //depot/projects/libdbus-java/...@727 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree 67ba3993231aa602ddb6bd9ae8896bd389072d39 -p HEAD < .msgGIT: tag -f p4/727 bdf43d630421468a42bedf86a5e476f9ecb7bc4bGIT: update-ref HEAD bdf43d630421468a42bedf86a5e476f9ecb7bc4b e2f4f5861fa24169420dff33daf03d85cab7e5b8Importing changeset 728P4: describe -s 728P4: sync    //depot/projects/libdbus-java/...@728 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree 4d070adc845038d0fd1b777435e7412cfb43f715 -p HEAD < .msgGIT: tag -f p4/728 1e81a8e5f339d03612990ad17bb8b5219360c17cGIT: update-ref HEAD 1e81a8e5f339d03612990ad17bb8b5219360c17c bdf43d630421468a42bedf86a5e476f9ecb7bc4bImporting changeset 730P4: describe -s 730P4: sync    //depot/projects/libdbus-java/...@730 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree fda2e2ea462775c97071204fcb39740f146a6d79 -p HEAD < .msgGIT: tag -f p4/730 c51d0f65589c45bd005244df54a05950e1aa26f4GIT: update-ref HEAD c51d0f65589c45bd005244df54a05950e1aa26f4 1e81a8e5f339d03612990ad17bb8b5219360c17cImporting changeset 735P4: describe -s 735P4: sync    //depot/projects/libdbus-java/...@735 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree 7f654117588b5891c6f15b16f3e8eec5e4d37f30 -p HEAD < .msgGIT: tag -f p4/735 99500724df3cbbecba8d624e12ff085810ae2c99GIT: update-ref HEAD 99500724df3cbbecba8d624e12ff085810ae2c99 c51d0f65589c45bd005244df54a05950e1aa26f4Importing changeset 736P4: describe -s 736P4: sync    //depot/projects/libdbus-java/...@736 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree 82e37a848c85e386177eb8c03ae13ab04d1fc125 -p HEAD < .msgGIT: tag -f p4/736 d7c805be5a30a6692c7b176830b9a68e64a7678cGIT: update-ref HEAD d7c805be5a30a6692c7b176830b9a68e64a7678c 99500724df3cbbecba8d624e12ff085810ae2c99Importing changeset 737P4: describe -s 737P4: sync    //depot/projects/libdbus-java/...@737 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree 0f48e76f8d7c23926e07d55bc8c9f4961327ec7f -p HEAD < .msgGIT: tag -f p4/737 2e87f60c2c2da0592c01a8cc1d07178a2988e498GIT: update-ref HEAD 2e87f60c2c2da0592c01a8cc1d07178a2988e498 d7c805be5a30a6692c7b176830b9a68e64a7678cImporting changeset 738P4: describe -s 738P4: sync    //depot/projects/libdbus-java/...@738 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree cc4b0b6e9471f977c78e9ee9e9faa086f5ca1c99 -p HEAD < .msgGIT: tag -f p4/738 c0e1c8b56fbd42796f5bc7bca728a05f59b46bf7GIT: update-ref HEAD c0e1c8b56fbd42796f5bc7bca728a05f59b46bf7 2e87f60c2c2da0592c01a8cc1d07178a2988e498Importing changeset 741P4: describe -s 741P4: sync    //depot/projects/libdbus-java/...@741 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdinGIT: rev-parse --verify HEADGIT: write-treeGIT: commit-tree 2a2fcdbe86d66405d0df8281987b4f7eddc4bf89 -p HEAD < .msgGIT: tag -f p4/741 a69fececa4ea39c63cb652092bed0f5df3377a83GIT: update-ref HEAD a69fececa4ea39c63cb652092bed0f5df3377a83 c0e1c8b56fbd42796f5bc7bca728a05f59b46bf7Importing changeset 761P4: describe -s 761P4: sync    //depot/projects/libdbus-java/...@761 GIT: ls-files -m -d -o -z | git update-index --add --remove -z --stdin
